--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -6,7 +6,7 @@
 </head>
 {%  load staticfiles %}
 <link rel="stylesheet" type="text/css" href="{% static  'music/style.css'%}" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -49,7 +49,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li class="">
-                    <a href="#">
+                    <a href=" {% url 'music:album-add' %} }">
                         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; Add Album
 
                     </a>
